# pydantic_tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/advanced_models/: README.md
examples/basic_models/: README.md
examples/serialization/: README.md
exercises/: README.md
src/pydantic_tutorial/advanced_models/: README.md  __init__.py  dynamic_models.py  inheritance.py  nested_models.py
src/pydantic_tutorial/basic_models/: __init__.py  field_types.py  simple_model.py  validation.py
src/pydantic_tutorial/integration/: README.md  __init__.py
src/pydantic_tutorial/real_world/: README.md  __init__.py
src/pydantic_tutorial/real_world/api_example/: main.py  models.py  schemas.py
src/pydantic_tutorial/real_world/configuration/: config.py
src/pydantic_tutorial/real_world/data_processing/: error_handling.py  load_validate.py  transform_data.py
src/pydantic_tutorial/serialization/: __init__.py  custom_serialization.py  json_serialization.py
