[project]
name ="pydantic-tutorial"
description = "A comprehensive tutorial on data validation with Pydantic, from basic to advanced."
version = "0.1.0"
authors = [{name = "Serkan Yaşar" , email = "yasarserkan016@gmail.com"}]
requires-python = ">=3.10,< 3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.6,<3.0"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["pydantic_tutorial"]

[tool.hatch.build.targets.wheel]
packages = ["src"]